--- a/KiaraRolle copy/styles.css
+++ b/KiaraRolle copy/styles.css
@@ -49,6 +49,12 @@ html {
     color: white;
 }
 
+.logoSpace { 
+    padding-top: 25px; 
+    height: 500px; 
+    
+}
+
 hr {
     width:400px;
     border-top: 1px solid #f8f8f8; 
